feat(platform): V607-V627 大批次——报销全链路(ADR-094)/车间路线与持续补料(ADR-093)/库位主档关系/主档默认值上下文/旧系统来源证明三迁移 + OCR侧车部署与更新器备份恢复加固